@@ -36,6 +36,12 @@ cppcmp = "g++"
 //nhp compile flags
 flags = "-Wall -std=c++0x -O2"
 
+/* Include directory */
+include_dir = "usr/include"
+
+/* Nativehttp header */
+nativehttph_dst = "nativehttp/nativehttp.h"
+
 [Debugging]
 //Show compilator output(1/0)
 cmpout = 0
@@ -92,7 +98,7 @@ async_send = 0
 fsn_frame_buf_size = 57344
 
 [Manager]
-//Rate of manager cycles[seconds between each] - checking timeouts, in future also reloading pages, etc. '-1' to turn off 
+//Rate of manager cycles[seconds between each] - checking timeouts, in future also reloading pages, etc. '-1' to turn off (Note that menager is integral part of server and turning it off may cause high risk of DOS)
 managerrate = 5
 
 //Amount of time for POST data reciving, -1 for unlimited(s)
