@@ -21,6 +21,7 @@ freely, subject to the following restrictions:
    distribution.
 */
 #include "protocol.h"
+#include "http/data.h"
 
 enum nhps
 {
@@ -32,7 +33,7 @@ enum nhps
 
 string parse_nhp(string nhp)
 {
-	string top = "#include <nativehttp/nativehttp.h>\n";
+	string top = "#include <"+http::nhpc_nativehttph_dest+">\n";
 	string init = "extern \"C\"\n{\nint onload()\n{\n";
 	string page = "initated();\n}\nnativehttp::data::pagedata page(nativehttp::rdata* request)\n{\nstring result;\n";
 	string end = "return nativehttp::data::pagedata(result);\n}\n}\n";
